[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-l"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
"write_to" = "src/zhinst/toolkit/_version.py"
"local_scheme" = "no-local-version"
