
[metadata]
name = zhinst-toolkit
author = Zurich Instrument
author_email = info@zhinst.com
description = Zurich Instruments Toolkit High Level API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zhinst/zhinst-toolkit
project_urls =
    Bug Tracker = https://github.com/zhinst/zhinst-toolkit/issues
    Documentation = https://docs.zhinst.com/zhinst-toolkit/en/latest/
    Release notes = https://docs.zhinst.com/zhinst-toolkit/en/latest/changelog/index.html
    Source = https://github.com/zhinst/zhinst-toolkit

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
use_scm_version= True
install_requires =
    numpy>=1.13
    zhinst>=22.02
    zhinst-deviceutils>=0.1
    jsonschema>=3.2.0
    jsonref>=0.2
    typing_extensions>=4.1.1

include_package_data = True

[options.packages.find]
where = src
include = zhinst.*
